<resources>
    <string name="app_name">SAT</string>
    <!-- Strings related to login -->
    <string name="Login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Sign_up">"  Don't have and account? Sign Up now"</string>
    <string name="register">Register </string>
    <string name="or"> " "Or: </string>
    <string name="google">Login with Google</string>
</resources>
