<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity" android:background="#FFF9CF">

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"/>

    <Button
            android:id="@+id/login"
            android:enabled="false"
            android:layout_width="140dp"
            android:layout_height="47dp"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.017" app:layout_constraintHorizontal_bias="0.5"
            android:textColor="@color/colorPrimary"/>

    <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>
    <TextView
            android:text="@string/Sign_up"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:id="@+id/register" android:textSize="18sp"
            android:textColor="#2196F3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.005"/>
    <TextView
            android:text="@string/Login"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/Login" android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/username" android:layout_marginBottom="32dp"
            android:textColor="#3D73DF" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:layout_width="376dp"
            android:layout_height="77dp"
            android:id="@+id/google"
            android:background="@android:color/holo_red_light" android:textColor="#ECEFF3"
            android:text="@string/google" android:textSize="36sp" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:layout_marginEnd="15dp" android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="88dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/faceBook2"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:layout_width="376dp"
            android:layout_height="77dp"
            android:id="@+id/faceBook2"
            android:background="@drawable/facebook" android:textColor="#00DBD8D8"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" android:layout_marginTop="116dp"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toTopOf="@+id/google"/>
</android.support.constraint.ConstraintLayout>